nginx-custom/nginx-custom-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-custom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-custom
  template:
    metadata:
      labels:
        app: nginx-custom
    spec:
      containers:
      - name: nginx-custom
        image: nginx-custom:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
